--- a/project/docker-compose.yml
+++ b/project/docker-compose.yml
@@ -7,7 +7,9 @@ services:
       dockerfile: ./../backend/backend.dockerfile
     restart: always
     ports:
-      - "3001:3000"
+      - "3000:3000"
     deploy:
       mode: replicated
       replicas: 1
+    env_file:
+      - ../backend/.env
