feat: change database schema and add seed data
- use GraphQL Yoga as server and Pothos as schema builder
- add local Postgres container to be able to quickly generate Prisma schema, because currently the Deno integration does not support pull, push and migrate on Prisma Cloud databases
- add script for generating Prisma client with Docker image

--- a/project/Makefile
+++ b/project/Makefile
@@ -16,8 +16,12 @@ down:
 	docker-compose down
 	@echo "Done!"
 
-## build_backend: builds the necessary things for the backend
-build_backend:
-	@echo "Building Prisma client..."
-	cd ../backend/app && 
+## generate_backend_requirements: generates required things for the backend
+generate_backend_requirements:
+	@echo "Generating Prisma client..."
+	cd ../backend && \
+		docker build -f builder.dockerfile -t builder . && \
+		rm -rf app/generated && \
+		docker run --rm -it -v "$(shell pwd)/../backend/app/generated":/deno-dir/generated builder && \
+		docker rmi builder
 	@echo "Done!"
