--- a/project/docker-compose.yml
+++ b/project/docker-compose.yml
@@ -13,3 +13,23 @@ services:
       replicas: 1
     env_file:
       - ../backend/.env
+
+  postgres:
+    image: 'postgres:14.2'
+    ports:
+      - "5432:5432"
+    restart: always
+    deploy:
+      mode: replicated
+      replicas: 1
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: password
+      POSTGRES_DB: redempio
+    volumes:
+      - "./db-data/postgres/:/var/lib/postgresql/data/"
+    healthcheck:
+      test: pg_isready -U "$$POSTGRES_USER" -d "$$POSTGRES_DB"
+      interval: 10s
+      timeout: 2s
+      retries: 10
